--- a/src/styles/CountryCard.scss
+++ b/src/styles/CountryCard.scss
@@ -123,8 +123,8 @@ strong {
   line-height: 32px;
 }
 
-span,
-h1 {
+h1,
+span {
   font-size: 16px;
   font-weight: 300;
   line-height: 32px;
@@ -176,10 +176,6 @@ h1 {
   }
 
   h2 {
-    color: #fff;
-  }
-
-  span {
     color: #fff;
   }
 
