--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -49,7 +49,8 @@
 .country-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 67px;
+  row-gap: 67px;
+  column-gap: 75px;
   padding: 48px 80px;
   transition: opacity 0.8s ease-in;
   -webkit-transition: opacity 0.8s ease-in;
