--- a/src/styles/CountryList.scss
+++ b/src/styles/CountryList.scss
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
-    width: 220px;
+    // width: 220px;
     margin: 20px 0px 0px 35px;
   }
 
