--- a/src/styles/CountryData.scss
+++ b/src/styles/CountryData.scss
@@ -1,37 +1,44 @@
 .loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 9999; 
+
+  .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    -webkit-animation: spin 1s linear infinite;
 }
 
-.loader {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #3498db;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 3s linear infinite;
-  -webkit-animation: spin 3s linear infinite;
-}
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+    }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
+    100% {
+      transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      -moz-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+    }
   }
-
-  100% {
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-  }
 }
+
 
 .link {
   display: flex;
@@ -44,6 +51,11 @@
   width: 100%;
   height: 440px;
   flex-shrink: 0;
+    transition: opacity 0.8s ease-in;
+  -webkit-transition: opacity 0.8s ease-in;
+  -moz-transition: opacity 0.8s ease-in;
+  -ms-transition: opacity 0.8s ease-in;
+  -o-transition: opacity 0.8s ease-in;
 }
 
 .country-grid {
@@ -52,11 +64,6 @@
   row-gap: 67px;
   column-gap: 75px;
   padding: 48px 80px;
-  transition: opacity 0.8s ease-in;
-  -webkit-transition: opacity 0.8s ease-in;
-  -moz-transition: opacity 0.8s ease-in;
-  -ms-transition: opacity 0.8s ease-in;
-  -o-transition: opacity 0.8s ease-in;
 }
 
 
@@ -76,11 +83,5 @@
       width: 100%;
       margin-top: 37px;
     }
-  }
-
-  .loading {
-    font-size: 16px;
-    position: relative;
-    // top: 20px;
   }
 }
